Link-in-bio with a form

--- a/app/views/item_templates/backdoor_form.html.erb
+++ b/app/views/item_templates/backdoor_form.html.erb
@@ -2,18 +2,18 @@
 
 <form action="/make_a_new_item" method="post">
   <div>
-  <label>Link URL </label>
-  <input type = "text">
+  <label for="zebra">Link URL </label>
+  <input id="zebra" type = "text" name="link_url_param">
   </div>
 
   <div>
-  <label>Link Description </label>
-  <input type = "text">  
+  <label for="giraffe">Link Description </label>
+  <input id="giraffe" type = "text" name="link_description_param">  
   </div>
 
   <div>
-  <label>Thumbnail URL </label>
-  <input type = "text">
+  <label for="elephant">Thumbnail URL </label>
+  <input id="elephant" type = "text" name="thumbnail_url_param">
   </div>
 
 <button>Create item</button>
